[package]
name = "streamer-wands-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"
lazy-regex = "3"
notify = "6"
rustls = { version = "*", features = ["ring"], default-features = false }
steamlocate = "1"
tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
