[package]
name = "streamer-wands-linux"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
clap_mangen = "0.2"
include_dir = "0.7"
lazy-regex = "3"
notify = "6"
rustls = { version = "*", features = ["ring"], default-features = false }
steamlocate = "1"
tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
